samples/_failures_safe/1761716759_f3ad8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4dffa3d.c: In function ‘main’:
./samples/SAFE/__tmp_e4dffa3d.c:149:13: error: expected declaration or statement at end of input
  149 |             }
      |             ^
./samples/SAFE/__tmp_e4dffa3d.c:149:13: error: expected declaration or statement at end of input
